--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.14.5)  # Minimum CMake version required
 project(slimemould_cpp)  # Replace 'MyProject' with your project name
 
 
-add_executable(slime_alg_exe CALL-ALG.cpp main_alg.cpp F00.cpp)
+add_executable(slime_alg_exe examples/example-1.cpp src/main_alg.cpp src/F00.cpp src/F00_functions.cpp src/custom_math_operations.cpp src/get_Energy_v2.cpp src/getData.cpp src/SMA.cpp src/format_path.cpp src/processpath.cpp)
 
 #the following are compiler commands that improve performance
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
@@ -15,5 +15,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-generate")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 #this one disables assertations
-#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG")
 
